--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -15,11 +15,11 @@
     <body>
         <header>
             <h1>
-                title goes here
+                title goes here...
               {{ title }}
             </h1>
             <main>
-                content goes here
+                content goes here...
               {{ content | safe }}
             </main>
         </header>
