--- a/src/content/about/index.liquid
+++ b/src/content/about/index.liquid
@@ -1,9 +1,9 @@
 ---
-layout: base.njk
+layout: base.liquid
 title: About me
 eleventyNavigation:
   key: About Me
   order: 1
 ---
 
-I am a person that writes stuff.
+<p>I am a person that writes stuff.</p>
