--- a/src/content/about/index.liquid
+++ b/src/content/about/index.liquid
@@ -5,5 +5,10 @@ eleventyNavigation:
   key: About Me
   order: 1
 ---
-
-<p>I am a person that writes stuff.</p>
+<h1>About Me</h1>
+<p>
+  Over the past eight years, I have focused on mastering modern JavaScript frameworks, particularly in the context of web accessibility. This has allowed me to create user interfaces for digital products across a wide range of industries, including sports, education, retail, e-commerce, and finance. My work always considers the needs of all users, including those with disabilities, ensuring a broad and inclusive user experience.          
+  Throughout my career, I've placed a strong emphasis on unit and system testing, using tools like Jest and Cypress, and running Axe-core, an accessibility testing engine. I firmly believe that these practices are not just beneficial, but essential for developing functional, maintainable, scalable, and accessible products.
+  My approach to accessibility is practical, incremental, and above all, collaborative. I work closely with project managers, developers, and designers to implement web content accessibility guidelines (WCAG) using a blend of automated and manual testing and assistive technology. I take pride in raising awareness, providing training, and offering practical solutions to integrate accessibility throughout the software development life cycle. 
+  This inclusive approach not only ensures accessibility but also fosters a sense of teamwork and shared responsibility.
+</p>
