--- a/src/content/projects/index.liquid
+++ b/src/content/projects/index.liquid
@@ -5,5 +5,19 @@ eleventyNavigation:
   key: Projects
   order: 3
 ---
+<h1>Projects as a Front-end developer</h1>
+<h2>Current projects as a self-employed web developer</h2>
+<ul>
+  <li>brushella.art</li>
+  <li>Gattoni.cl</li>
+</ul>
 
-Projects as a front-end developer
+<h2>Past projects as a Web developer</h2>
+<ul>
+  <li>PlayHQ</li>
+  <li>Factor5</li>
+  <li>University of Melbourne
+  </li>
+  <li>Paddl
+  </li>
+</ul>
