--- a/src/index.liquid
+++ b/src/index.liquid
@@ -1,9 +1,11 @@
 ---
 layout: "base.liquid"
-title: Hello world from Index
+title: Welcome to my portfolio - Melissa Gattoni - Frontend developer
 eleventyNavigation:
   key: Home
   order: 4
 ---
 
-I'm Melissa, Front-end developer and Accessibility specialist.
+<p>
+  I’m a front-end developer and accessibility specialist. I focus on creating accessible websites that work for everyone, regardless of their abilities. This is my online portfolio where I showcase my latest projects and occasionally write and sketch.
+</p>
